--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<link id="wsite-base-style" rel="stylesheet" type="text/css" href="//cdn2.editmysite.com/css/sites.css?buildTime=1527288298">
 <link rel="stylesheet" type="text/css" href="//cdn2.editmysite.com/css/old/fancybox.css?1527288298">
 <link rel="stylesheet" type="text/css" href="//cdn2.editmysite.com/css/social-icons.css?buildtime=1527288298" media="screen,projection">
-<link rel="stylesheet" type="text/css" href="/files/main_style.css?1527349125" title="wsite-theme-css">
+<link rel="stylesheet" type="text/css" href="/files/main_style.css" title="wsite-theme-css">
 <link href="//fonts.googleapis.com/css?family=Montserrat:400,700&amp;subset=latin,latin-ext" rel="stylesheet" type="text/css">
 
 <style type="text/css">
@@ -528,8 +528,8 @@ var STYLE_PREFIX = 'wsite';
     </ul>
   </div>
 
-	<script type="text/javascript" src="/files/theme/plugins.js?1525709815"></script>
-  <script type="text/javascript" src="/files/theme/custom.js?1525709815"></script>
+	<script type="text/javascript" src="/files/theme/plugins.js"></script>
+  <script type="text/javascript" src="/files/theme/custom.js"></script>
 
 		<script type="text/javascript">
 	var _gaq = _gaq || [];
