--- a/index.html
+++ b/index.html
@@ -1,14 +1,5 @@
 <html lang="en"><head><script type="text/javascript" async="" src="https://www.gstatic.com/recaptcha/api2/v1526884278587/recaptcha__en.js"></script><script async="" src="//cdn2.editmysite.com/js/wsnbn/snowday262.js"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" id="zb-embed-code" async="" src="//static.zotabox.com/6/9/6972ea4fe8e76a20caa3b853ee786fd5/widgets.js"></script><script async="" src="//cdn2.editmysite.com/js/wsnbn/snowday261.js"></script><script src="/gdpr/gdprscript.js?buildTime=1527288298&amp;stealth=false"></script>
-		<title>VIEWROOM MEETINGS - Home</title><meta property="og:site_name" content="VIEWROOM MEETINGS">
-<meta property="og:title" content="VIEWROOM MEETINGS">
-<meta property="og:description" content="At the University of the West Indies, an increasing number of courses are being streamed to and from other campuses. As the number of persons depending on these streaming services increases, the...">
-<meta property="og:image" content="http://viewroom.weebly.com/uploads/1960076688_orig.png">
-<meta property="og:image" content="http://viewroom.weebly.com/uploads/jhanelle_orig.png">
-<meta property="og:image" content="http://viewroom.weebly.com/uploads/published/b.png?1527345418">
-<meta property="og:image" content="http://viewroom.weebly.com/uploads/thecia_orig.png">
-<meta property="og:image" content="http://viewroom.weebly.com/uploads/download_orig.png">
-<meta property="og:image" content="http://viewroom.weebly.com/uploads/vr.png">
-<meta property="og:url" content="http://viewroom.weebly.com/">
+		<title>VIEWROOM MEETINGS - Home</title>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
