--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link id="wsite-base-style" rel="stylesheet" type="text/css" href="//cdn2.editmysite.com/css/sites.css?buildTime=1527288298">
 <link rel="stylesheet" type="text/css" href="//cdn2.editmysite.com/css/old/fancybox.css?1527288298">
 <link rel="stylesheet" type="text/css" href="//cdn2.editmysite.com/css/social-icons.css?buildtime=1527288298" media="screen,projection">
-<link rel="stylesheet" type="text/css" href="/files/main_style.css" title="wsite-theme-css">
+<link rel="stylesheet" type="text/css" href="files/main_style.css" title="wsite-theme-css">
 <link href="//fonts.googleapis.com/css?family=Montserrat:400,700&amp;subset=latin,latin-ext" rel="stylesheet" type="text/css">
 
 <style type="text/css">
@@ -93,7 +93,7 @@ var STYLE_PREFIX = 'wsite';
           <div class="logo"><span class="wsite-logo">
 
 	<a href="/">
-		<img src="/uploads/vr.png" alt="VIEWROOM MEETINGS">
+		<img src="uploads/vr.png" alt="VIEWROOM MEETINGS">
 	</a>
 
 </span></div>
@@ -123,7 +123,7 @@ var STYLE_PREFIX = 'wsite';
 
 <div class="" data-sr-id="3" style="; visibility: visible;  -webkit-transform: translateY(0) scale(1); opacity: 1;transform: translateY(0) scale(1); opacity: 1;-webkit-transition: -webkit-transform 0.7s ease-in 0.8s, opacity 0.7s ease-in 0.8s; transition: transform 0.7s ease-in 0.8s, opacity 0.7s ease-in 0.8s; "><div class="wsite-image wsite-image-border-none" style="padding-top:10px;padding-bottom:10px;margin-left:0;margin-right:0;text-align:inherit">
 <a>
-<img src="/uploads/1960076688.png" alt="Picture" style="width:auto;max-width:100%">
+<img src="uploads/1960076688.png" alt="Picture" style="width:auto;max-width:100%">
 </a>
 <div style="display:block;font-size:90%"></div>
 </div></div>
@@ -343,7 +343,7 @@ var STYLE_PREFIX = 'wsite';
 
 <div><div class="wsite-image wsite-image-border-none" style="padding-top:10px;padding-bottom:10px;margin-left:0;margin-right:0;text-align:center">
 <a>
-<img src="/uploads/jhanelle.png" alt="Picture" style="width:auto;max-width:100%">
+<img src="uploads/jhanelle.png" alt="Picture" style="width:auto;max-width:100%">
 </a>
 <div style="display:block;font-size:90%"></div>
 </div></div>
@@ -358,7 +358,7 @@ var STYLE_PREFIX = 'wsite';
 
 <div><div class="wsite-image wsite-image-border-none" style="padding-top:10px;padding-bottom:10px;margin-left:0;margin-right:0;text-align:center">
 <a>
-<img src="/uploads/b.png" alt="Picture" style="width:221;max-width:100%">
+<img src="uploads/b.png" alt="Picture" style="width:221;max-width:100%">
 </a>
 <div style="display:block;font-size:90%"></div>
 </div></div>
@@ -373,7 +373,7 @@ var STYLE_PREFIX = 'wsite';
 
 <div><div class="wsite-image wsite-image-border-none" style="padding-top:10px;padding-bottom:10px;margin-left:0;margin-right:0;text-align:left">
 <a>
-<img src="/uploads/thecia_orig.png" alt="Picture" style="width:auto;max-width:100%">
+<img src="uploads/thecia_orig.png" alt="Picture" style="width:auto;max-width:100%">
 </a>
 <div style="display:block;font-size:90%"></div>
 </div></div>
@@ -388,7 +388,7 @@ var STYLE_PREFIX = 'wsite';
 
 <div><div class="wsite-image wsite-image-border-none" style="padding-top:10px;padding-bottom:10px;margin-left:0;margin-right:0;text-align:center">
 <a>
-<img src="/uploads/download_orig.png" alt="Picture" style="width:auto;max-width:100%">
+<img src="uploads/download_orig.png" alt="Picture" style="width:auto;max-width:100%">
 </a>
 <div style="display:block;font-size:90%"></div>
 </div></div>
@@ -519,8 +519,8 @@ var STYLE_PREFIX = 'wsite';
     </ul>
   </div>
 
-	<script type="text/javascript" src="/files/theme/plugins.js"></script>
-  <script type="text/javascript" src="/files/theme/custom.js"></script>
+	<script type="text/javascript" src="files/theme/plugins.js"></script>
+  <script type="text/javascript" src="files/theme/custom.js"></script>
 
 		<script type="text/javascript">
 	var _gaq = _gaq || [];
