--- a/index.html
+++ b/index.html
@@ -104,6 +104,36 @@ var STYLE_PREFIX = 'wsite';
 			</a>
 			
 		</li>
+		<li id="active" class="wsite-menu-item-wrap   wsite-nav-1" style="position: relative;">
+			<a href="#about" class="wsite-menu-item" style="position: relative;">
+				About
+			</a>
+			
+		</li>
+		<li id="active" class="wsite-menu-item-wrap   wsite-nav-1" style="position: relative;">
+			<a href="#feat" class="wsite-menu-item" style="position: relative;">
+				Features
+			</a>
+			
+		</li>
+		<li id="active" class="wsite-menu-item-wrap   wsite-nav-1" style="position: relative;">
+			<a href="#fut" class="wsite-menu-item" style="position: relative;">
+				Future
+			</a>
+			
+		</li>
+		<li id="active" class="wsite-menu-item-wrap   wsite-nav-1" style="position: relative;">
+			<a href="#team" class="wsite-menu-item" style="position: relative;">
+				Team
+			</a>
+			
+		</li>
+		<li id="active" class="wsite-menu-item-wrap   wsite-nav-1" style="position: relative;">
+			<a href="#contact" class="wsite-menu-item" style="position: relative;">
+				Contact
+			</a>
+			
+		</li>
 </ul>
 <div id="wsite-menus"></div></div></div>
         </div>
@@ -147,7 +177,7 @@ var STYLE_PREFIX = 'wsite';
 		<div class="wsite-section-content">
           <div class="container">
 			<div class="wsite-section-elements">
-				<h2 class="wsite-content-title" style="text-align:center;; visibility: visible;  -webkit-transform: translateY(0) scale(1); opacity: 1;transform: translateY(0) scale(1); opacity: 1;-webkit-transition: -webkit-transform 0.3s ease-in 0.3s, opacity 0.3s ease-in 0.3s; transition: transform 0.3s ease-in 0.3s, opacity 0.3s ease-in 0.3s; " data-sr-id="5"><font size="7">Our Problem</font><font color="#f8c91c"><font size="7">.</font></font></h2>
+				<h2 id="about" class="wsite-content-title" style="text-align:center;; visibility: visible;  -webkit-transform: translateY(0) scale(1); opacity: 1;transform: translateY(0) scale(1); opacity: 1;-webkit-transition: -webkit-transform 0.3s ease-in 0.3s, opacity 0.3s ease-in 0.3s; transition: transform 0.3s ease-in 0.3s, opacity 0.3s ease-in 0.3s; " data-sr-id="5"><font size="7">The Problem</font><font color="#f8c91c"><font size="7">.</font></font></h2>
 
 <div class="wsite-spacer" style="height:50px;"></div>
 
@@ -202,7 +232,7 @@ var STYLE_PREFIX = 'wsite';
 
 <div class="wsite-spacer" style="height:48px;"></div>
 
-<h2 class="wsite-content-title" style="text-align:center;; visibility: visible;  -webkit-transform: translateY(0) scale(1); opacity: 1;transform: translateY(0) scale(1); opacity: 1;-webkit-transition: -webkit-transform 0.3s ease-in 0.3s, opacity 0.3s ease-in 0.3s; transition: transform 0.3s ease-in 0.3s, opacity 0.3s ease-in 0.3s; " data-sr-id="10"><font size="7">Features</font><font color="#f8c91c"><font size="7">.</font></font></h2>
+<h2 id="feat" class="wsite-content-title" style="text-align:center;; visibility: visible;  -webkit-transform: translateY(0) scale(1); opacity: 1;transform: translateY(0) scale(1); opacity: 1;-webkit-transition: -webkit-transform 0.3s ease-in 0.3s, opacity 0.3s ease-in 0.3s; transition: transform 0.3s ease-in 0.3s, opacity 0.3s ease-in 0.3s; " data-sr-id="10"><font size="7">Features</font><font color="#f8c91c"><font size="7">.</font></font></h2>
 
 <div class="wsite-spacer" style="height:50px;"></div>
 
@@ -282,7 +312,7 @@ var STYLE_PREFIX = 'wsite';
 		<div class="wsite-section-content">
           <div class="container">
 			<div class="wsite-section-elements">
-				<h2 class="wsite-content-title" style="text-align:center;"><font size="7">Coming Soon</font><font color="#f8c91c"><font size="7">.</font></font><font size="7"></font></h2>
+				<h2 id="fut" class="wsite-content-title" style="text-align:center;"><font size="7">Coming Soon</font><font color="#f8c91c"><font size="7">.</font></font><font size="7"></font></h2>
 
 <div class="wsite-spacer" style="height:50px;"></div>
 
@@ -327,7 +357,7 @@ var STYLE_PREFIX = 'wsite';
 			<div class="wsite-section-elements">
 				<div class="wsite-spacer" style="height:50px;"></div>
 
-<h2 class="wsite-content-title" style="text-align:center;; visibility: visible;  -webkit-transform: translateY(0) scale(1); opacity: 1;transform: translateY(0) scale(1); opacity: 1;-webkit-transition: -webkit-transform 0.3s ease-in 0.3s, opacity 0.3s ease-in 0.3s; transition: transform 0.3s ease-in 0.3s, opacity 0.3s ease-in 0.3s; " data-sr-id="14"><font color="#d5d5d5" size="7">The Team</font><font color="#f8c91c"><font size="7">.</font></font></h2>
+<h2 id="team" class="wsite-content-title" style="text-align:center;; visibility: visible;  -webkit-transform: translateY(0) scale(1); opacity: 1;transform: translateY(0) scale(1); opacity: 1;-webkit-transition: -webkit-transform 0.3s ease-in 0.3s, opacity 0.3s ease-in 0.3s; transition: transform 0.3s ease-in 0.3s, opacity 0.3s ease-in 0.3s; " data-sr-id="14"><font color="#d5d5d5" size="7">The Team</font><font color="#f8c91c"><font size="7">.</font></font></h2>
 
 <div class="wsite-spacer" style="height:10px;"></div>
 
@@ -416,7 +446,7 @@ var STYLE_PREFIX = 'wsite';
 			<div class="wsite-section-elements">
 				<div class="wsite-spacer" style="height:20px;"></div>
 
-<h2 class="wsite-content-title" data-sr-id="17" style="; visibility: visible;  -webkit-transform: translateY(0) scale(1); opacity: 1;transform: translateY(0) scale(1); opacity: 1;-webkit-transition: -webkit-transform 0.3s ease-in 0.3s, opacity 0.3s ease-in 0.3s; transition: transform 0.3s ease-in 0.3s, opacity 0.3s ease-in 0.3s; "><font size="7" color="#2a2a2a">Contact Us</font><font color="#f8c91c"><font size="7">.</font></font></h2>
+<h2 id="contact" class="wsite-content-title" data-sr-id="17" style="; visibility: visible;  -webkit-transform: translateY(0) scale(1); opacity: 1;transform: translateY(0) scale(1); opacity: 1;-webkit-transition: -webkit-transform 0.3s ease-in 0.3s, opacity 0.3s ease-in 0.3s; transition: transform 0.3s ease-in 0.3s, opacity 0.3s ease-in 0.3s; "><font size="7" color="#2a2a2a">Contact Us</font><font color="#f8c91c"><font size="7">.</font></font></h2>
 
 <div class="" data-sr-id="18" style="; visibility: visible;  -webkit-transform: translateY(0) scale(1); opacity: 1;transform: translateY(0) scale(1); opacity: 1;-webkit-transition: -webkit-transform 0.3s ease-in 0.3s, opacity 0.3s ease-in 0.3s; transition: transform 0.3s ease-in 0.3s, opacity 0.3s ease-in 0.3s; ">
 	<form enctype="multipart/form-data" action="https://viewroom.weebly.com/ajax/apps/formSubmitAjax.php" method="POST" id="form-958288343132606303" accept-charset="UTF-8" target="form-958288343132606303-target-1527349178772">
