--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@ var STYLE_PREFIX = 'wsite';
           <label class="hamburger"><span></span></label>
           <div class="logo"><span class="wsite-logo">
 
-	<a href="/">
+	<a href="/VRMeeting">
 		<img src="uploads/vr.png" alt="VIEWROOM MEETINGS">
 	</a>
 
 </span></div>
           <div class="nav desktop-nav"><div class="container"><ul class="wsite-menu-default">
 		<li id="active" class="wsite-menu-item-wrap   wsite-nav-1" style="position: relative;">
-			<a href="/" class="wsite-menu-item" style="position: relative;">
+			<a href="/VRMeeting" class="wsite-menu-item" style="position: relative;">
 				Home
 			</a>
 			
